@@ -1,4 +1,4 @@
-<!ENTITY day          "29">                   <!-- Always 2 digits -->
+<!ENTITY day          "30">                   <!-- Always 2 digits -->
 <!ENTITY month        "04">                   <!-- Always 2 digits -->
 <!ENTITY year         "2006">
 <!ENTITY version      "svn-&year;&month;&day;">
@@ -35,7 +35,7 @@
 <!ENTITY lfs-perl-version             "5.8.8">
 <!-- End LFS versions -->
 
-<!ENTITY blfs-bootscripts-version     "20060427">
+<!ENTITY blfs-bootscripts-version     "20060430">
 <!ENTITY blfs-bootscripts-download    "&downloads-root;/blfs-bootscripts-&blfs-bootscripts-version;.tar.bz2">
 
 <!ENTITY blfs-wiki                    "http://wiki.linuxfromscratch.org/blfs/wiki">
@@ -314,7 +314,7 @@
 <!-- Chapter 21 -->
 <!ENTITY apache-version               "2.2.0">
 <!-- bind (chapter 19) -->
-<!ENTITY nfs-utils-version            "1.0.7">
+<!ENTITY nfs-utils-version            "1.0.8">
 <!-- openssh (chapter 18) -->
 <!ENTITY proftpd-version              "1.2.10">
 <!-- samba3 (chapter 18) -->
